production/model-platform/tekton/ci/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: model-platform-ci
  labels:
    app.kubernetes.io/part-of: model-platform
    app.kubernetes.io/managed-by: kubectl
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
